style(layout): add template partials

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,5 @@
-<% content_for :header do %>
-  <header class="container">
-    <p>
-      <%= image_tag("logo-chaordic.png",  :alt => "logo", :class => "logo") %>
-    </p>
-  </header>
-<% end %>
+<header class="header">
+  <p>
+    <%= image_tag("logo.png",  :alt => "logo", :class => "logo") %>
+  </p>
+</header>
