refactor(models): complementing model attributes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,22 +1,14 @@
 <article class="container">
-  
-  <section class="columns">
-    <div class="column has-text-centered">
-      <h1>Shorten Your Links</h1>
+    
+    <div class="column">
+        <h1>Bank Account</h1>
 
-      <p>Bank Account<br>
-        Choose an operation in the navigation bar.</p>
+        <p>Choose an operation in the menu on the left.</p>
 
 
     </div>
-  </section>
 
-  <section class="column">
-    <p>
-        paragraph
-    </p>
 
-  </section>
 
 </article>
 
