--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,13 @@
 <article class="container">
-    
-    <div class="column">
-        <h1>Bank Account</h1>
+  
+  <div class="column">
+    <h1>Bem vindo ao site do banco</h1>
 
-        <p>Choose an operation in the menu on the left.</p>
+    <p>Você precisa estar logado para realizar operacoes</p>
+    <p>Use o menu de navegação para realizar um cadastro ou entrar no site</p>
 
 
-    </div>
+  </div>
 
 
 
